[package]
name = "simple-ibc-tx"
version = "0.1.0"
edition = "2021"
authors = ["Nicolas Lara <nicolas@osmosis.team>"]
description = "Simple standalone Namada IBC transaction example"

[[bin]]
name = "simple-ibc-tx"
path = "src/main.rs"

[dependencies]
# Namada SDK dependencies
namada_core = "0.150.2"
namada_sdk = { version = "0.150.2", default-features = false, features = [
    "std",
    "async-send",
    "download-params",
] }
namada_tx = "0.150.2"
namada_ibc = "0.150.2"
namada_wallet = "0.150.2"
namada_token = "0.150.2"

# Tendermint dependencies
tendermint-rpc = { version = "0.40.4", features = ["http-client"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# MASP dependencies
masp_primitives = "1.4.0"

# Other utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
url = "2.4"
kdam = "0.6"
futures = "0.3"
